--- a/tournaments/halloffamenudity.html
+++ b/tournaments/halloffamenudity.html
@@ -244,12 +244,12 @@
                     <div class="round quarterfinals current">
                         <div class="round-details">Quarterfinals<br /></div>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Eva Green<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Alexandra Daddario<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/wfnvqu" target="_blank">Eva Green<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/wfnvqu" target="_blank">Alexandra Daddario<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Elizabeth Olsen<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Jaime Pressly<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/wfnvw3" target="_blank">Elizabeth Olsen<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/wfnvw3" target="_blank">Jaime Pressly<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                 </div>
@@ -281,31 +281,31 @@
                     <div class="round quarterfinals current">
                         <div class="round-details">Quarterfinals<br /></div>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/wfnw1f" target="_blank">Emily Ratajkowski<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/wfnw1f" target="_blank">Ana De Armas<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/wfnw60" target="_blank">Sydney Sweeney<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/wfnw60" target="_blank">Margot Robbie<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                     <div class="round round-three current">
                         <div class="round-details">Round 3B<br /></div>
                         <ul class="matchup">
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/wbk6iw" target="_blank">Emily Ratajkowski<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/wbk6iw" target="_blank">Emmy rossum<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/wbk6iw" target="_blank">Emmy rossum<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/wbk6ov" target="_blank">Ana De Armas<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/wbk6ov" target="_blank">Jennifer Connelly<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/wbk6ov" target="_blank">Jennifer Connelly<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/wbk6z5" target="_blank">Sydney Sweeney<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/wbk6z5" target="_blank">Scarlett Johansson<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/wbk6z5" target="_blank">Scarlett Johansson<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/wbk6u7" target="_blank">Margot Robbie<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/wbk6u7" target="_blank">Salma Hayek<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/wbk6u7" target="_blank">Salma Hayek<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                     <!-- END ROUND THREE -->
