--- a/tournaments/halloffamenudity.html
+++ b/tournaments/halloffamenudity.html
@@ -265,14 +265,14 @@
                         <i class="fa fa-trophy"></i>
                         <div class="round-details">Grand Finale <br /></div>
                         <ul class="matchup championship">
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Ana De Armas<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/wqhu7v" target="_blank">Ana De Armas<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/wqhu7v" target="_blank">Sydney Sweeney<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                     <div class="semis-r current">
                         <div class="round-details">Semifinals 2 <br /></div>
                         <ul class="matchup championship">
-                            <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/wmcnxv" target="_blank">Elizabeth Olsen<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/wmcnxv" target="_blank">Elizabeth Olsen<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/wmcnxv" target="_blank">Sydney Sweeney<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
