--- a/tournaments/halloffamenudity.html
+++ b/tournaments/halloffamenudity.html
@@ -266,7 +266,7 @@
                         <div class="round-details">Grand Finale <br /></div>
                         <ul class="matchup championship">
                             <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/wqhu7v" target="_blank">Ana De Armas<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/wqhu7v" target="_blank">Sydney Sweeney<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/wqhu7v" target="_blank">Sydney Sweeney<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                     <div class="semis-r current">
