--- a/tournaments/hottestathlete.html
+++ b/tournaments/hottestathlete.html
@@ -14,7 +14,7 @@
 
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>CelebBattles - Hall of Fame Nudity</title>
+  <title>CelebBattles - Hottest Athlete 2022</title>
   <link rel="icon" type="image/png" href="favicon.png" />
   <!-- Vendor CSS Files -->
   <link href="../assets/vendor/animate.css/animate.min.css" rel="stylesheet">
