--- a/tournaments/hottestathlete.html
+++ b/tournaments/hottestathlete.html
@@ -69,6 +69,7 @@
               <li><a href="https://celebbattles.github.io/tournaments/teambattles">Team Battles</a></li>
               <li><a href="https://celebbattles.github.io/tournaments/under25">Hottest Celeb Under 25</a></li>
               <li><a href="https://celebbattles.github.io/tournaments/halloffamenudity">Hall of Fame Nudity</a></li>
+              <li><a href="https://celebbattles.github.io/tournaments/hottestathlete">Hottest Athlete</a></li>
             </ul>
           </li>
         </ul>
@@ -115,24 +116,42 @@
                 <tbody>
                   <tr class="table-active">
                     <td>Cha Yu-Ram</td>
-                    <td>0 - 0 - 0</td>
-                    <td>0</td>
-                    <td>0</td>
-                  </tr>
-                  <tr class="table-active">
-                    <td>Silje Norendal</td>
-                    <td>0 - 0 - 0</td>
-                    <td>0</td>
+                    <td>1 - 0 - 0</td>
+                    <td>3</td>
                     <td>0</td>
                   </tr>
                   <tr class="table-active">
                     <td>Yuliya Levchenko</td>
-                    <td>0 - 0 - 0</td>
-                    <td>0</td>
+                    <td>1 - 0 - 0</td>
+                    <td>3</td>
                     <td>0</td>
                   </tr>
                   <tr class="table-active">
                     <td>Camille LeBlanc</td>
+                    <td>1 - 0 - 0</td>
+                    <td>3</td>
+                    <td>0</td>
+                  </tr>
+                  <tr class="table-active">
+                    <td>Ana Ivanovic</td>
+                    <td>1 - 0 - 0</td>
+                    <td>3</td>
+                    <td>0</td>
+                  </tr>
+                  <tr>
+                    <td>Chloe Kim</td>
+                    <td>1 - 0 - 0</td>
+                    <td>3</td>
+                    <td>0</td>
+                  </tr>
+                  <tr>
+                    <td>Alica Schmidt</td>
+                    <td>1 - 0 - 0</td>
+                    <td>3</td>
+                    <td>0</td>
+                  </tr>
+                  <tr>
+                    <td>Silje Norendal</td>
                     <td>0 - 0 - 0</td>
                     <td>0</td>
                     <td>0</td>
@@ -156,12 +175,6 @@
                     <td>0</td>
                   </tr>
                   <tr>
-                    <td>Ana Ivanovic</td>
-                    <td>0 - 0 - 0</td>
-                    <td>0</td>
-                    <td>0</td>
-                  </tr>
-                  <tr>
                     <td>Evgenia Medvedeva</td>
                     <td>0 - 0 - 0</td>
                     <td>0</td>
@@ -169,18 +182,6 @@
                   </tr>
                   <tr>
                     <td>Caroline Garcia</td>
-                    <td>0 - 0 - 0</td>
-                    <td>0</td>
-                    <td>0</td>
-                  </tr>
-                  <tr>
-                    <td>Chloe Kim</td>
-                    <td>0 - 0 - 0</td>
-                    <td>0</td>
-                    <td>0</td>
-                  </tr>
-                  <tr>
-                    <td>Alica Schmidt</td>
                     <td>0 - 0 - 0</td>
                     <td>0</td>
                     <td>0</td>
