--- a/tournaments/hottestathlete.html
+++ b/tournaments/hottestathlete.html
@@ -815,7 +815,7 @@
           <div class="split split-one">
             <div class="round round-two current">
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);">Group A1<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Alica Schmidt<span class="score">&nbsp;</span></a></li>
                 <li class="team team-top name-details"><a href="javascript:void(0);">Group E4<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
@@ -828,11 +828,11 @@
               </ul>
               <ul class="matchup">
                 <li class="team team-top name-details"><a href="javascript:void(0);">Group E2<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Group A3<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Chloe Kim<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
                 <li class="team team-top name-details"><a href="javascript:void(0);">Group E1<span class="score">&nbsp;</span></a></li>
-                <li class="team team-top name-details"><a href="javascript:void(0);">Group A4<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Silje Norendal<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
                 <li class="team team-top name-details"><a href="javascript:void(0);">Group F2<span class="score">&nbsp;</span></a></li>
@@ -843,7 +843,7 @@
                 <li class="team team-top name-details"><a href="javascript:void(0);">Group B4<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                <li class="team team-top name-details"><a href="javascript:void(0);">Group A2<span class="score">&nbsp;</span></a></li>
+                <li class="team team-top name-details"><a href="javascript:void(0);">Evgenia Medvedeva<span class="score">&nbsp;</span></a></li>
                 <li class="team team-top name-details"><a href="javascript:void(0);">Group E3<span class="score">&nbsp;</span></a></li>
               </ul>
             </div>
