--- a/tournaments/hottestathlete.html
+++ b/tournaments/hottestathlete.html
@@ -268,7 +268,7 @@
                     <td>0</td>
                   </tr>
                   <tr>
-                    <td>Paige VanZant</td>
+                    <td>Simone Biles</td>
                     <td>0 - 0 - 0</td>
                     <td>0</td>
                     <td>0</td>
